# gyrovert_cpp_api

./: CMakeLists.txt  README.md
Example_1_ReceiveDataInConsole/: CMakeLists.txt  ReceiveDataInConsole.cpp
Example_2_ReadRawSensorsData/: CMakeLists.txt  ReadRawSensorsData.cpp
Example_3_AlgorithmSelectionExample/: AlgorithmSelectionExample.cpp  CMakeLists.txt
Example_4_FileWriterExample/: CMakeLists.txt  FileWriterExample.cpp  GKV_FileWriter.cpp  GKV_FileWriter.h
LMP_CommunicationLibrary/: CMakeLists.txt
LMP_CommunicationLibrary/src/: GKV_Device.h  LMP_AlgParamPacket.h  LMP_AlorithmPackets.h  LMP_BasePacket.h  LMP_CustomPacket.h  LMP_Device.cpp  LMP_Device.h  LMP_Etc.h  LMP_FilterPacket.h  LMP_GyroOffsetPacket.h  LMP_IfProto.h  LMP_SettingsPacket.h  LMP_TestPacket.h
